<resources>
    <string name="app_name">English Tester</string>
    <string name="navigation_draw_open">Open navigation drawer</string>
    <string name="navigation_draw_close">Close navigation drawer</string>
    <string name="english_test">English Tester</string>
    <string name="email">Email</string>
    <string name="matkhau"> Password </string>
    <string name="dangnhap">LOG IN</string>
    <string name="quenmatkhau">Forgot password!</string>
    <string name="dangnhapnhanh">Log in with</string>
    <string name="todo">ToDo</string>
    <string name="hoten">User name</string>
    <string name="nhaplaimatkhau">Re-password</string>
    <string name="dangkithanhvien">REGISTER</string>
    <string name="x">Cancel</string>
    <string name="laylaimatkhau">Lấy lại mật khẩu</string>
    <string name="gui">Gửi</string>
    <string name="name">Nguyen minh vuon</string>
    <string name="mail">nguyenminhvuon.nmv@gmail.com</string>
</resources>