<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="17dp"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txtTieuDe"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:text="@string/laylaimatkhau"

        android:textColor="#049DC3" />


    <EditText
        android:id="@+id/txtEmail"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:padding="15dp"
        android:background="@drawable/botron"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <Button
        android:id="@+id/btnGui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_login_hover"
        android:layout_margin="15dp"
        android:text="@string/gui" />

    <Button
        android:id="@+id/btnThoat"
        android:layout_width="match_parent"
        android:background="@drawable/button_login_hover"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content"
        android:text="@string/x" />
</LinearLayout>