<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/txtTieuDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/english_test"
        android:textColor="#EBEDE7"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edtHoTEn"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/botron"
        android:ems="10"
        android:hint="@string/hoten"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTieuDe"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:background="@drawable/botron"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtHoTEn"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtMatKhau1"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/matkhau"
        android:background="@drawable/botron"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        android:autofillHints="" />
    <EditText
        android:id="@+id/edtMatKhau2"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/nhaplaimatkhau"
        android:background="@drawable/botron"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMatKhau1"
        android:autofillHints="" />


    <Button
        android:id="@+id/btnDangKi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/botron"
        android:text="@string/dangkithanhvien"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMatKhau2" />

    <Button
        android:id="@+id/btnThoat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="@string/x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>