<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/english_test"
        android:textColor="#EBEDE7"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/botron"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edtMatKhau"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/botron"
        android:ems="10"
        android:hint="@string/matkhau"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnDangNhap"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/dangnhap"
        android:textColor="#597F8E"
        android:background="@drawable/botron"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMatKhau" />

    <TextView
        android:id="@+id/txtQMK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/quenmatkhau"
        android:textColor="#0941D1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDangNhap" />

    <TextView
        android:id="@+id/txtDangNhapNhanh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/dangnhapnhanh"
        android:textSize="18sp"
        android:textColor="#597F8E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQMK" />

    <ImageButton
        android:id="@+id/imageBtnFaceBook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDangNhapNhanh"
        app:srcCompat="@drawable/imfb"
        android:contentDescription="@string/todo" />

    <ImageButton
        android:id="@+id/imageBtnGoogle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:scaleType="centerCrop"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDangNhapNhanh"
        app:srcCompat="@drawable/imgg"
        android:contentDescription="@string/todo" />


    <TextView
        android:id="@+id/txtDangki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Tạo tài khoản"
        android:textColor="#0C8AFA"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBtnGoogle" />


</androidx.constraintlayout.widget.ConstraintLayout>